--- a/Hairwebsite/index.html
+++ b/Hairwebsite/index.html
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <img src="alle_versies\logo\scissor-magic-logo">
-<h1>JOEY IS KING</h1>
+    <img src="alle_versies/logo/scissor-magic-logo.jpg">
+    <ol>
+        <li><a href="Openingstijden.html">Home</a>  </li>
+        <li><a href="Openingstijden.html">Openingstijden</a>  </li>
+        <li><a href="Openingstijden.html">Producten</a>  </li>
+        <li><a href="Openingstijden.html">Salons</a>  </li>
+    </ol>
 </body>
 </html>
