--- a/Hairwebsite/index.html
+++ b/Hairwebsite/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -12,5 +13,32 @@
         <li><a href="Openingstijden.html">Producten</a>  </li>
         <li><a href="Openingstijden.html">Salons</a>  </li>
     </ol>
+<table border="1">
+    <tr>
+        <th colspan="4">Prijzen</th>
+    </tr>
+    <tr>
+        <td>Profesioneel advies</td>
+        <td>Wassen, knippen en drogen</td>
+        <td>Modelfohnen</td>
+        <td>Kleurspoeling</td>
+    </tr>
+    <tr>
+        <td>€ 15,00</td>
+        <td>€ 12,50</td>
+        <td>€ 32,75</td>
+        <td>€ 12,50</td>
+    </tr>
+    <tr>
+        <td colspan="2">Highlights<br>Max. 10 highlights</td>
+        <td colspan="1">Permanente kleuring</td>
+        <td colspan="2">Balayage</td>
+    </tr>
+    <tr>
+        <td colspan="2">€ 15,00</td>
+        <td>€ 12,50</td>
+        <td colspan="2">€ 32,75</td>
+    </tr>
+</table>
 </body>
 </html>
