--- a/Hairwebsite/index.html
+++ b/Hairwebsite/index.html
@@ -40,6 +40,9 @@
         <td colspan="2">€ 32,75</td>
     </tr>
 </table>
-<h1> Onze specaliteiten</h1>
+<h2> Onze specaliteiten</h2>
+<img src="img/girl-model-lip-eyebrow-long-hair-red-hair-445310-pxhere2.jpg">
+<img src="img/person-people-woman-hair-portrait-red-554660-pxhere2.jpg">
+<img src="img/woman-hair-model-red-color-fashion-810821-pxhere2.jpg">
 </body>
 </html>
