--- a/Hairwebsite/index.html
+++ b/Hairwebsite/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-    <img src="alle_versies/logo/scissor-magic-logo.jpg">
+
+    <img alt="logo" src="alle_versies/logo/scissor-magic-logo.jpg">
     <ol>
         <li><a href="Openingstijden.html">Home</a>  </li>
         <li><a href="Openingstijden.html">Openingstijden</a>  </li>
@@ -41,8 +41,8 @@
     </tr>
 </table>
 <h2> Onze specaliteiten</h2>
-<img src="img/girl-model-lip-eyebrow-long-hair-red-hair-445310-pxhere2.jpg">
-<img src="img/person-people-woman-hair-portrait-red-554660-pxhere2.jpg">
-<img src="img/woman-hair-model-red-color-fashion-810821-pxhere2.jpg">
+    <a href="Collectie.html" ><img alt="hairstyle" src="img/girl-model-lip-eyebrow-long-hair-red-hair-445310-pxhere2.jpg"></a>
+<a href="Collectie.html" ><img alt="a different hairstyle" src="img/person-people-woman-hair-portrait-red-554660-pxhere2.jpg"></a>
+<a href="Collectie.html" ><img alt="another hairstyle" src="img/woman-hair-model-red-color-fashion-810821-pxhere2.jpg"></a>
 </body>
 </html>
