--- a/Hairwebsite/Collectie.html
+++ b/Hairwebsite/Collectie.html
@@ -14,7 +14,7 @@
 <a href="index.html">Terug naar overzicht</a>
 <p>Amazing haircuts - Bill Cosby <br><br></p>
 <table border="0" width="100%" >
-<imgs src="img/pexels-photo2.jpg">
+<img src="img/pexels-photo2.jpg">
 <img src="img/Wild___red_hair_day2.jpg">
 <img src="img/woman-hair-model-red-color-fashion-810821-pxhere2.jpg">
 </table>
