--- a/Hairwebsite/Collectie.html
+++ b/Hairwebsite/Collectie.html
@@ -23,6 +23,7 @@
 <img src="img/Woman_redhead_natural_portrait_2.jpg">
 <img src="img/Redhead_twins2.jpg">
 </table>
+<!--harrypotter-->
 <table border="0" width="100%">
 <img src="img/Mohawk_-_Millennium_Park%202.jpg">
 <img src="img/Harry_Knowles_by_Gage_Skidmore%202.jpg">
