--- a/Hairwebsite/Openingstijden.html
+++ b/Hairwebsite/Openingstijden.html
@@ -7,10 +7,10 @@
 <body>
 <img src="alle_versies/logo/scissor-magic-logo.jpg">
 <ol>
-    <li><a href="Openingstijden.html">Home</a>  </li>
+    <li><a href="index.html">Home</a>  </li>
     <li><a href="Openingstijden.html">Openingstijden</a>  </li>
-    <li><a href="Openingstijden.html">Producten</a>  </li>
-    <li><a href="Openingstijden.html">Salons</a>  </li>
+    <li><a href="Producten.html">Producten</a>  </li>
+    <li><a href="Salons.html">Salons</a>  </li>
 </ol>
 </body>
 </html>
