--- a/Hairwebsite/Producten.html
+++ b/Hairwebsite/Producten.html
@@ -7,10 +7,22 @@
 <body>
 <img src="alle_versies/logo/scissor-magic-logo.jpg">
 <ol>
-    <li><a href="Openingstijden.html">Home</a>  </li>
+    <li><a href="index.html">Home</a>  </li>
     <li><a href="Openingstijden.html">Openingstijden</a>  </li>
-    <li><a href="Openingstijden.html">Producten</a>  </li>
-    <li><a href="Openingstijden.html">Salons</a>  </li>
+    <li><a href="Producten.html">Producten</a>  </li>
+    <li><a href="Salons.html">Salons</a>  </li>
 </ol>
+<h1>Raveen products</h1>
+<p>Supreme beauty products coporation. Chicago, Illinois</p>
+<div>
+<img width="160px" src="alle_versies/producten/raveen-logo.gif">
+</div>
+    <table border="0">
+        <img height="400px" src="alle_versies/producten/raveen_02.jpg">
+        <img height="400px" src="alle_versies/producten/raveen_03.jpg">
+        <img height="400px" src="alle_versies/producten/raveen_04.jpg">
+
+
+</table>
 </body>
 </html>
