--- a/Hairwebsite/Salons.html
+++ b/Hairwebsite/Salons.html
@@ -12,5 +12,8 @@
     <li><a href="Producten.html">Producten</a>  </li>
     <li><a href="Salons.html">Salons</a>  </li>
 </ol>
+<h1>Onze Salon</h1>
+<img src="alle_versies/kapperszaken/barbershop1.jpg">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9743.553575704706!2d4.888760790226745!3d52.37244367709675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609b884575367%3A0x3509f467a8d39c68!2sDe+Wallen%2C+Amsterdam!5e0!3m2!1snl!2snl!4v1544784165460" width="1024" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
