--- a/Hairwebsite/Openingstijden.html
+++ b/Hairwebsite/Openingstijden.html
@@ -12,5 +12,68 @@
     <li><a href="Producten.html">Producten</a>  </li>
     <li><a href="Salons.html">Salons</a>  </li>
 </ol>
+<h1>Openingstijden</h1>
+<table border="1">
+    <tr>
+        <td rowspan="5">Kapsalon Scissor Magic in Huizen</td>
+        <td rowspan="2">ma - vr</td>
+        <td >09:00 - 12:00</td>
+    </tr>
+    <tr>
+        <td >13:30 - 18:00</td>
+    </tr>
+    <tr>
+        <td rowspan="2">za</td>
+        <td>09:00 - 12:00</td>
+    </tr>
+    <tr>
+        <td>14:30 - 18:00</td>
+    </tr>
+    <tr>
+        <td>zo</td>
+        <td>Gesloten</td>
+    </tr>
+    <tr>
+        <td rowspan="5">Kapsalon Scissor Magic in Naarden</td>
+        <td rowspan="2">ma - vr</td>
+        <td >09:00 - 12:30</td>
+    </tr>
+    <tr>
+        <td >14:30 - 18:00</td>
+    </tr>
+    <tr>
+        <td rowspan="2">za</td>
+        <td>09:00 - 12:30</td>
+    </tr>
+    <tr>
+        <td>14:30 - 18:00</td>
+    </tr>
+    <tr>
+        <td>zo</td>
+        <td>Gesloten</td>
+    </tr>
+    <tr>
+        <td rowspan="6">Kapsalon Scissor Magic in Utrecht</td>
+        <td rowspan="2">ma - vr</td>
+        <td >09:00 - 12:30</td>
+    </tr>
+    <tr>
+        <td >14:30 - 18:00</td>
+    </tr>
+    <tr>
+        <td rowspan="2">za</td>
+        <td>09:00 - 12:30</td>
+    </tr>
+    <tr>
+        <td>14:30 - 17:00</td>
+    </tr>
+    <tr>
+        <td rowspan="2">zo</td>
+        <td>11:00 - 12:30</td>
+    </tr>
+    <tr>
+        <td>14:30 - 16:00</td>
+    </tr>
+</table>
 </body>
 </html>
