--- a/Hairwebsite/index.html
+++ b/Hairwebsite/index.html
@@ -34,6 +34,7 @@
         <td colspan="1">Permanente kleuring</td>
         <td colspan="2">Balayage</td>
     </tr>
+    <!--Anwars website-->
     <tr>
         <td colspan="2">€ 15,00</td>
         <td>€ 12,50</td>
